Squashed commit of the following:
commit 75e1472bbdd55588228c7fbe6c03420279fb398f
Author: Vladimir Izmalkov <vladimir@vaticle.com>
Date:   Thu Sep 14 19:30:54 2023 +0100

    Connect page updates and fixes

commit abb40ba6453b7466f8cd51e14c77ab0fbd5e7c75
Author: Vladimir Izmalkov <vladimir@vaticle.com>
Date:   Thu Sep 14 18:12:05 2023 +0100

    Connect page update

commit 9529fc1278f3cf22232f9674ac3c4b053b55fbad
Author: Vladimir Izmalkov <vladimir@vaticle.com>
Date:   Wed Sep 13 18:56:04 2023 +0100

    Update Fundamentals

commit f5fb30ce33dae067ce14e8db732eb802568684bb
Author: Vladimir Izmalkov <vladimir@vaticle.com>
Date:   Tue Sep 12 19:43:02 2023 +0100

    Minor fixes after self-review

commit f7bae2ec24c973afbab2c82dc027816145d91515
Author: Vladimir Izmalkov <vladimir@vaticle.com>
Date:   Tue Sep 12 19:23:13 2023 +0100

    Fix nav menu and connect page placement

commit 1acff467e2eba0cee0880fb53f9aae620aa3d5a4
Author: Vladimir Izmalkov <vladimir@vaticle.com>
Date:   Tue Sep 12 18:41:38 2023 +0100

    Fundamentals (WIP)

    Minor editorial fixes

commit 9e6150c1dda88142832f27d877755196e4b7c592
Author: Vladimir Izmalkov <vladimir@vaticle.com>
Date:   Tue Sep 12 16:41:59 2023 +0100

    Update nav.adoc according to the Overview

commit f96a967753e6c71b5b98cac192511a0bcede9e75
Author: Vladimir Izmalkov <vladimir@vaticle.com>
Date:   Tue Sep 12 15:32:19 2023 +0100

    Refactoring Managing TypeDB section

commit 0a77a3fca948926c84eb13dee17675c384f08d41
Author: Vladimir Izmalkov <vladimir@vaticle.com>
Date:   Tue Sep 12 13:08:32 2023 +0100

    Quickstart guide examples update

commit 21523f79f8cda099270cf3469a2927b4c1cc3be1
Author: Vladimir Izmalkov <vladimir@vaticle.com>
Date:   Mon Sep 11 19:36:36 2023 +0100

    Quickstart (WIP)

commit df4574d069a84153087960896d7b83ad3a2aa352
Author: Vladimir Izmalkov <vladimir@vaticle.com>
Date:   Mon Sep 11 11:05:19 2023 +0100

    Fixing build errors

commit ba8d8f3f8bdc9afedb4526077cf48c21428cae82
Author: Vladimir Izma

--- a/typedb-src/modules/ROOT/pages/fundamentals.adoc
+++ b/typedb-src/modules/ROOT/pages/fundamentals.adoc
@@ -38,7 +38,7 @@ image::clients::client-server-comms.png[client-server]
 //database data separation
 TypeDB stores data in databases.
 
-Every database has a name, schema, and data.
+Every database has a name and consists of schema and data.
 
 For more information on how to create a database, see the xref:development/connect.adoc#_databases[Databases] section
 on the xref:development/connect.adoc[] page.
@@ -108,6 +108,7 @@ TypeDB usually uses a single connection to a single TypeDB server or cluster.
 //session
 //Without a session, we can establish a session, create a new database or delete an existing one.
 To open a session, we need a database name and a session type: `schema` or `data`.
+
 You can open more than one session to a database, but there are some limitations for the
 xref:development/acid-guarantees.adoc#_schema_integrity[schema integrity].
 
@@ -117,9 +118,10 @@ section on the xref:development/connect.adoc[] page.
 //transaction
 //Without a transaction we can
 To open a transaction, we need a transaction type: `read` or `write`.
+
 You can open more than one transaction in a session, but transactions have a time limit of 5 minutes by default.
 
-For more information on how to open a transaction, see the xref:development/connect.adoc#_transactions[sessions]
+For more information on how to open a transaction, see the xref:development/connect.adoc#_transactions[transactions]
 section on the xref:development/connect.adoc[] page.
 
 == Query
