--- a/typedb-src/modules/ROOT/pages/development/connect.adoc
+++ b/typedb-src/modules/ROOT/pages/development/connect.adoc
@@ -4,29 +4,44 @@
 :pageTitle: Connecting
 :summary: Brief description of connection to TypeDB.
 :tabs-sync-option:
+:experimental:
+
+This page describes how to connect to a TypeDB, open a session to a database,
+and open a transaction for sending a query.
+
+xref:clients::studio.adoc[TypeDB Studio] automates session and transaction management,
+but most other TypeDB Clients require manual control over sessions and transactions.
 
 [#_clients]
 == Clients
 
-TypeDB server accepts remote connections from xref:clients:ROOT:clients.adoc[TypeDB Clients] via
+TypeDB accepts remote connections from xref:clients::clients.adoc[TypeDB Clients] via
+https://github.com/vaticle/typedb-protocol[TypeDB protocol], based on
 https://en.wikipedia.org/wiki/GRPC[gRPC,window=_blank].
 
-Once connected, TypeDB Clients can manage <<_databases,databases>>, <<_sessions,sessions>>, and
-<<_transactions, transactions>>.
+TypeDB Drivers provide methods to establish a network connection (by initializing a client object) and to manage
+<<_databases,databases>>,
+<<_sessions,sessions>>, and
+<<_transactions,transactions>>.
 
 [NOTE]
 ====
 It's recommended to instantiate a single client per application.
 ====
 
-[tabs]
+.See how to connect to a TypeDB server
+[%collapsible]
 ====
+
+[tabs]
+=====
 TypeDB Console::
 +
 --
+Use the following command to start TypeDB Console and connect it to a TypeDB server:
 [,bash]
 ----
-typedb console --server=0.0.0.0:1729
+typedb console --server=127.0.0.1:1729
 ----
 --
 
@@ -35,7 +50,7 @@ Java::
 --
 [,java]
 ----
-TypeDBClient client = TypeDB.coreClient("0.0.0.0:1729");
+TypeDBClient client = TypeDB.coreClient("127.0.0.1:1729");
 ----
 --
 
@@ -44,7 +59,7 @@ Python::
 --
 [,python]
 ----
-client = TypeDB.core_client("0.0.0.0:1729")
+client = TypeDB.core_client("127.0.0.1:1729")
 ----
 --
 
@@ -53,54 +68,75 @@ Node.js::
 --
 [,js]
 ----
-client = TypeDB.coreClient("0.0.0.0:1729");
+client = TypeDB.coreClient("127.0.0.1:1729");
 ----
 --
-====
+=====
 
-[NOTE]
-====
-To connect to TypeDB Cloud use `clusterClient`/`cluster_client` instead of `coreClient`/`core_client`.
-It requires a second argument of `TypeDBCredential` type.
+To connect to a TypeDB cluster, use `clusterClient`/`cluster_client` methods instead of `coreClient`/`core_client`.
+For more information, see the *Driver API reference*:
+xref:clients::java/java-api-ref.adoc#_instantiating_a_typedb_cluster_client[Java],
+xref:clients::python/python-api-ref.adoc#_instantiating_a_typedb_cluster_client[Python], and
+xref:clients::node-js/node-js-api-ref.adoc#_instantiating_a_typedb_cluster_client[Node.js].
 ====
 
 [#_protocol_version]
 === Protocol version control
 
-There is a server-side check for the TypeDB protocol version. If an incompatible version of a TypeDB
-Client tries to connect to a TypeDB server, the server will send an error instead of initiating the connection.
+A connection from an incompatible version of TypeDB Client gets denied by TypeDB to prevent any potential communication
+errors.
 
-This is to prevent any potential errors from using incompatible versions of the client and the server.
-
-In the `2.18.0` version of TypeDB, the TypeDB protocol has version number 1.
+.See more details
+[%collapsible]
+====
+In the `2.18.0` version of TypeDB, the TypeDB protocol has version number `1`.
 
 For backward compatibility protocol version control will allow TypeDB Clients versions prior to `2.18.0` (i.e., with
-protocol version N/A, or < 1) to connect with a TypeDB server with protocol version 1.
+protocol version `N/A` or `< 1`) to connect with a TypeDB server with protocol version `1`.
 
 [NOTE]
-====
+=====
 If we try to connect to an older server (prior to version `2.18.0`) with a newer client, we should still get an error
 due to the older server lacking the API to check the protocol version.
+=====
 ====
+
+To check the TypeDB protocol versions, see the Compatibility tables on the installation pages of TypeDB Clients:
+
+* xref:clients::studio.adoc#_version_compatibility[TypeDB Studio]
+* xref:clients::console.adoc#_version_compatibility[TypeDB Console]
+* xref:clients::java/java-install.adoc#_version_compatibility[TypeDB Driver Java]
+* xref:clients::python/python-install.adoc#_version_compatibility[TypeDB Driver Python]
+* xref:clients::node-js/node-js-install.adoc#_version_compatibility[TypeDB Driver Node.js]
 
 [#_databases]
 == Databases
 
-TypeDB instances can contain multiple databases. A database consists of a xref:development/define-schema.adoc[schema] and
-xref:development/write-data.adoc[data]. It is both separate and independent of any other database: two databases can't influence
+A TypeDB server/cluster can store multiple databases.
+
+A database has a name and consists of a xref:development/define-schema.adoc[schema] and
+xref:development/write-data.adoc[data].
+
+Every database is independent of any other databases: two databases can't influence
 each other. However, TypeDB Clients can connect to multiple databases simultaneously.
 
 [NOTE]
 ====
-TypeDB is optimized for a small number of databases. It's recommended to start with a single database and add more if
-necessary (e.g., to support more applications). The **best practice** is to keep the number of databases **under 10**.
+TypeDB is optimized for a small number of databases per server/cluster.
+
+It is best to keep the number of databases **under 10**.
+====
+
+.See how to create and manage a database
+[%collapsible]
 ====
 
 [tabs]
-====
+=====
 TypeDB Console::
 +
 --
+Use the following commands in TypeDB Console prompt:
 [,bash]
 ----
 # create database
@@ -167,73 +203,83 @@ await client.databases().contains("test-db");
 await (await client.databases().get("test-db")).delete();
 ----
 --
+=====
 ====
 
 [#_sessions]
 == Sessions
 
-A session is like a tunnel connection to a database in a TypeDB server. An open session lets us open transactions
-in it.
+A session is like a tunnel connection to a database in a TypeDB server/cluster.
+
+There are two types of sessions in TypeDB:
+
+* Schema
+* Data
+
+.See more details
+[%collapsible]
+====
+TypeDB Clients should use *DATA* sessions for data operations, but it is possible to read schema in them.
+
+TypeDB Clients should use *SCHEMA* sessions for schema operations, but it is possible to read data in them.
+
+To read both schema and data from a database, we recommend using *DATA* sessions.
+But it can be done in any session type.
+
+It is NOT possible to modify a schema and its data in the same session, regardless of the session type.
+
+Choose an appropriate session type to write schema or data.
+====
+
+You can open multiple sessions with the same client (network connection).
 
 image::clients::concurrency-model.png[Session-transaction-query,link=self,width=100%]
 
-[IMPORTANT]
-====
-Any TypeDB Client will automatically exchange internal signals with the server to keep the session alive when it's open.
-If the server doesn't receive this signal for a period of time bigger than timeout (30 secs by default) it will
-forcibly close the session due to inactivity.
-====
-
-There are two types of sessions:
-
-* SCHEMA sessions,
-* DATA sessions.
-
 [WARNING]
 ====
-Only one *Schema* session can be open at any time. And any open *Schema* session blocks all attempts to open a
-*Data Write* transaction.
-For more information on these limits, see the xref:development/acid-guarantees.adoc#_schema_integrity[] section.
+Only one session of the *Schema* type can be open at any time.
+
+An open *Schema* session blocks any attempt to open a *Data Write* <<_transactions,transaction>>.
+
+For more information on these limitations,
+see the xref:development/acid-guarantees.adoc#_schema_integrity[schema integrity] section on the
+xref:typedb::development/acid-guarantees.adoc[] page.
 ====
 
-[cols="^,^,^,^,^",options="header"]
-|===
-| Session type | Read data | Write data | Read schema | Write schema
+A good principle to follow is for logically coherent transactions to be grouped into a single session.
 
-| DATA
-| Yes
-| Yes
-| Yes
-| *No*
+[IMPORTANT]
+====
+It is recommended to avoid long-running sessions, because of possible network failures.
+====
 
-| SCHEMA
-| Yes
-| *No*
-| Yes
-| Yes
-|===
-
-TypeDB Clients should read and write data in DATA sessions.
-
-TypeDB Clients should read and write schema in SCHEMA sessions.
+.See more details
+[%collapsible]
+====
 
 [NOTE]
-====
-If a client needs to read both schema and data from a database, it can be done in any session type (usually used when
-a data query needs information on types). But it is NOT possible to modify a schema and its data in the same session,
-regardless of the type.
+=====
+Any TypeDB Client will regularly exchange internal signals with the server to keep the session alive when it's open.
+The default timeout is 30 seconds.
+=====
 
-Write transactions are strict to the session types (see the table above for illustration).
+Once a session has been opened,
+TypeDB Clients can open and close transactions in that session to read or write schema or data.
 ====
 
-Once a session has been opened, Clients can open and close transactions in that session to read or write a database's
-schema or data.
+Sessions must be explicitly opened and closed by TypeDB Clients.
+
+.See how to open a session
+[%collapsible]
+====
 
 [tabs]
-====
+=====
 TypeDB Console::
 +
 --
+In TypeDB Console we open a session and a transaction with a single command from TypeDB Console prompt:
+
 [,bash]
 ----
 transaction iam data read
@@ -266,11 +312,11 @@ Node.js::
 session = await client.session("iam", SessionType.DATA);
 ----
 --
+=====
 ====
 
-Sessions must be explicitly opened and closed by TypeDB Clients.
-
-For more information on how to do it with different Clients see the documentation:
+For more information on how to manage sessions with different TypeDB Clients, see the
+xref:clients::clients.adoc[Clients] documentation:
 
 * xref:clients:ROOT:studio.adoc#_transaction_control[TypeDB Studio]
 * xref:clients:ROOT:console.adoc#_database_management_commands[TypeDB Console]
@@ -279,38 +325,100 @@ For more information on how to do it with different Clients see the documentatio
 ** xref:clients:ROOT:python/python-api-ref.adoc#_session_create[Python],
 ** xref:clients:ROOT:node-js/node-js-api-ref.adoc#_session_create[Node.js].
 
-[IMPORTANT]
-====
-It is recommended to avoid long-running sessions, because of possible network failures.
-====
-
-A good principle to follow is for logically coherent transactions to be grouped into a session.
+An open session lets you open a <<_transactions,transaction>>.
 
 [#_transactions]
 == Transactions
 
-All queries to a TypeDB database are performed through transactions. TypeDB transactions provide full
-xref:development/acid-guarantees.adoc[] up to xref:development/acid-guarantees.adoc#_isolation[snapshot isolation].
+All queries to a TypeDB database are performed through an open transaction.
 
-There are two types of transactions:
+TypeDB transactions use snapshot isolation and optimistic concurrency control to support concurrent, lock-free
+read/write transactions.
+For more information, see the xref:development/acid-guarantees.adoc[] page.
 
-* READ transactions
-* WRITE transactions
+There are two types of transactions in TypeDB:
+
+* Read
+* Write
+
+.See more details
+[%collapsible]
+====
+TypeDB Clients should use *READ* transactions for retrieving data or types.
+No data changes are possible with read transactions.
+Inference is possible only with read transactions.
+
+TypeDB Clients should use *WRITE* transactions for modifying data, but it is possible to retrieve data in them.
+All changes must be committed, or they will be lost upon closing the transaction.
+
+Choose an appropriate session type and queries to write schema or data:
+
+[cols="^,^,^,^,^",options="header"]
+|===
+| Session type | Read data | Write data | Read schema | Write schema
+
+| DATA
+| Yes
+| Yes
+| Yes
+| #No#
+
+| SCHEMA
+| Yes
+| #No#
+| Yes
+| Yes
+|===
+
+////
+Write transactions are strict to a session type:
+
+* data can't be modified in a `schema` session;
+* schema can't be modified in a `data session`.
+////
+
+Use write transactions with:
+
+* `schema` session type to use Define and Undefine queries.
+* `data` session type to use Insert, Delete, and Update queries.
+
+While Get queries can be used in a write transaction, it's not recommended.
+For more information on write transactions blocks, read the
+xref:typedb::development/acid-guarantees.adoc#_schema_integrity[schema integrity] section on the
+xref:typedb::development/acid-guarantees.adoc[] page.
+
+To use inference, the `infer` transaction option should be enabled in a read transaction.
+
+You can open multiple transactions within the same session (except to a write transaction with a schema session).
+====
+
+Transactions must be explicitly opened and closed by a TypeDB Client.
+
+.See how to manage a transaction
+[%collapsible]
+====
 
 [tabs]
-====
+=====
 TypeDB Console::
 +
 --
+Open a transaction:
 [,bash]
 ----
-# start transaction
-transaction iam data write
-insert $x isa person;
-$x has full-name "Kevin";
-$x has email "Kevin@vaticle.com";
-# commit changes
+transaction try-iam data write
+----
+
+Commit changes and close transaction:
+[,bash]
+----
 commit
+----
+
+Close transaction (without committing the changes):
+[,bash]
+----
+close
 ----
 --
 
@@ -321,11 +429,12 @@ Java::
 ----
 // start transaction
 TypeDBTransaction transaction = session.transaction(TypeDBTransaction.Type.WRITE);
-transaction.query().insert(insertQuery1);
-transaction.query().insert(insertQuery2);
-transaction.query().insert(insertQueryN);
-// commit changes
+
+// commit changes and close transaction
 transaction.commit();
+
+// close transaction
+transaction.close();
 ----
 --
 
@@ -336,11 +445,12 @@ Python::
 ----
 # start transaction
 transaction = session.transaction(TransactionType.WRITE)
-transaction.query().insert(insert_query1)
-transaction.query().insert(insert_query2)
-transaction.query().insert(insert_queryN)
-# commit changes
+
+# commit changes and close transaction
 transaction.commit()
+
+# close transaction
+transaction.close()
 ----
 --
 
@@ -351,20 +461,108 @@ Node.js::
 ----
 // start transaction
 const transaction = await session.transaction(TransactionType.WRITE);
-transaction.query().insert(InsertQuery1);
-transaction.query().insert(InsertQuery2);
-transaction.query().insert(InsertQueryN);
+
+// commit changes and close transaction
+transaction.commit();
+
+// close transaction
+transaction.close();
+----
+--
+=====
+====
+
+.See querying example
+[%collapsible]
+====
+
+[tabs]
+=====
+TypeDB Console::
++
+--
+Use the following steps:
+
+1. Open a transaction:
++
+[,bash]
+----
+transaction try-iam data write
+----
+
+2. Copy the following TypeQL query:
++
+[,bash]
+----
+insert $x isa person, has full-name "Bob", has email "bob@vaticle.com";
+----
+
+3. Press btn:[Enter] twice to send the query. +
+The first pressing will start a new line for the query. +
+Pressing btn:[Enter] on an empty line will send the query.
+
+4. Commit changes:
++
+[,bash]
+----
+commit
+----
+--
+
+Java::
++
+--
+[,java]
+----
+// prepare queries
+String insertQuery = 'insert $x isa person, has full-name "Bob", has email "bob@vaticle.com";';
+
+// start transaction
+TypeDBTransaction transaction = session.transaction(TypeDBTransaction.Type.WRITE);
+transaction.query().insert(insertQuery);
+
 // commit changes
 transaction.commit();
 ----
 --
+
+Python::
++
+--
+[,python]
+----
+# prepare queries
+insert_query = 'insert $x isa person, has full-name "Bob", has email "bob@vaticle.com";'
+
+# start transaction
+transaction = session.transaction(TransactionType.WRITE)
+transaction.query().insert(insert_query)
+
+# commit changes
+transaction.commit()
+----
+--
+
+Node.js::
++
+--
+[,js]
+----
+// prepare queries
+let InsertQuery = 'insert $x isa person, has full-name "Bob", has email "bob@vaticle.com";';
+
+// start transaction
+const transaction = await session.transaction(TransactionType.WRITE);
+transaction.query().insert(InsertQuery);
+
+// commit changes
+transaction.commit();
+----
+--
+=====
 ====
 
-Transactions must be explicitly opened and closed by a TypeDB Client.
-
-TypeDB Studio lets developers commit/rollback transactions through its GUI.
-
-For more information on how to do it with different Clients see the documentation:
+For more information on how to control transactions in TypeDB Clients, see the documentation:
 
 * xref:clients:ROOT:studio.adoc#_transaction_control[TypeDB Studio]
 * xref:clients:ROOT:console.adoc#_transaction_querying_commands[TypeDB Console]
@@ -373,31 +571,27 @@ For more information on how to do it with different Clients see the documentatio
 ** xref:clients:ROOT:python/python-api-ref.adoc#_create_transaction[Python],
 ** xref:clients:ROOT:node-js/node-js-api-ref.adoc#_create_transaction[Node.js].
 
-TypeDB transactions use snapshot isolation and optimistic concurrency control to support concurrent, lock-free
-read/write transactions. For more information, see the xref:development/acid-guarantees.adoc[] page.
-
 === Transaction time limit
 
 [IMPORTANT]
 ====
-TypeDB transactions have a duration limit. By default, it's *5 minutes*.
-The default value can be changed with Client options.
+TypeDB transactions have a duration limit: *5 minutes* by default.
 ====
 
 The time limit is intended to encourage short-lived transactions, prevent memory leaks
-caused by transactions that will not be completed and terminate unresponsive transactions.
+caused by transactions that will not be completed, and terminate unresponsive transactions.
 
 === Best practices
 
 * Avoid long-running transactions which can result in conflicts and resource contention.
 * Transactions should group logically coherent queries.
 
-For more advice and *best practices* visit the xref:development/best.adoc[Best practices] page.
+For more advice and *best practices*, visit the xref:development/best.adoc[Best practices] page.
 
 == Learn more
 
 With the essential knowledge of the *Fundamentals* section and the ability to connect to a TypeDB databases, described
 on this page, let's try defining our own xref:development/define-schema.adoc[schema].
 
-After that we can try xref:development/write-data.adoc[writing] and xref:development/read-data.adoc[reading] data from
-a database.
+After that, try xref:development/write-data.adoc[writing] and xref:development/read-data.adoc[reading] data from
+a database with your schema.
