Squashed commit of the following:
commit fa674d3d421c61ccf8d9c1be664e37018ad2a1e2
Author: Vladimir Izmalkov <vladimir@vaticle.com>
Date:   Tue Sep 19 13:33:02 2023 +0100

    Copy-editor review fixes

commit a802db06aa2df49da66bad99b36a823a1014b6ff
Author: Vladimir Izmalkov <vladimir@vaticle.com>
Date:   Tue Sep 19 12:13:28 2023 +0100

    define-schema WIP

commit af04a4e523885544d6201148768db1252befd954
Author: Vladimir Izmalkov <vladimir@vaticle.com>
Date:   Mon Sep 18 19:03:27 2023 +0100

    Define schema (WIP)

commit 92d92e1dc6a755c92fa60040c04bafd34e0af8c3
Author: Vladimir Izmalkov <vladimir@vaticle.com>
Date:   Mon Sep 18 12:32:38 2023 +0100

    Move fundamentals folder to TypeQL

commit 7a8b4a5b9d6b0f1de5556f2ebe7d8973a078b567
Author: Vladimir Izmalkov <vladimir@vaticle.com>
Date:   Fri Sep 15 15:41:40 2023 +0100

    Update Fundamentals

commit 22b69df65f949b5796a69eaf5d37097f16c3e992
Author: Vladimir Izmalkov <vladimir@vaticle.com>
Date:   Thu Sep 14 19:51:08 2023 +0100

    Minor fixes

commit 75e1472bbdd55588228c7fbe6c03420279fb398f
Author: Vladimir Izmalkov <vladimir@vaticle.com>
Date:   Thu Sep 14 19:30:54 2023 +0100

    Connect page updates and fixes

commit abb40ba6453b7466f8cd51e14c77ab0fbd5e7c75
Author: Vladimir Izmalkov <vladimir@vaticle.com>
Date:   Thu Sep 14 18:12:05 2023 +0100

    Connect page update

commit 9529fc1278f3cf22232f9674ac3c4b053b55fbad
Author: Vladimir Izmalkov <vladimir@vaticle.com>
Date:   Wed Sep 13 18:56:04 2023 +0100

    Update Fundamentals

commit f5fb30ce33dae067ce14e8db732eb802568684bb
Author: Vladimir Izmalkov <vladimir@vaticle.com>
Date:   Tue Sep 12 19:43:02 2023 +0100

    Minor fixes after self-review

commit f7bae2ec24c973afbab2c82dc027816145d91515
Author: Vladimir Izmalkov <vladimir@vaticle.com>
Date:   Tue Sep 12 19:23:13 2023 +0100

    Fix nav menu and connect page placement

commit 1acff467e2eba0cee0880fb53f9aae620aa3d5a4
Author: Vladimir Izmalkov <vladimir@vaticle.com>
Date:   Tue Sep 12 18:41:38 2023 +01

--- a/typedb-src/modules/ROOT/pages/development/connect.adoc
+++ b/typedb-src/modules/ROOT/pages/development/connect.adoc
@@ -291,7 +291,7 @@ Java::
 --
 [,java]
 ----
-TypeDBSession session = client.session("iam", TypeDBSession.Type.DATA);
+TypeDBSession session = client.session("try-iam", TypeDBSession.Type.DATA);
 ----
 --
 
@@ -300,7 +300,7 @@ Python::
 --
 [,python]
 ----
-session = client.session("iam", SessionType.DATA)
+session = client.session("try-iam", SessionType.DATA)
 ----
 --
 
@@ -309,7 +309,7 @@ Node.js::
 --
 [,js]
 ----
-session = await client.session("iam", SessionType.DATA);
+session = await client.session("try-iam", SessionType.DATA);
 ----
 --
 =====
@@ -472,9 +472,13 @@ transaction.close();
 =====
 ====
 
+//#todo Add Send query section to the page structure!
 .See querying example
 [%collapsible]
 ====
+
+The following examples are using IAM database schema, that we defined in the
+xref:typedb::quickstart-guide.adoc#_define_a_schema_from_a_file[Quickstart guide].
 
 [tabs]
 =====
@@ -497,9 +501,9 @@ transaction try-iam data write
 insert $x isa person, has full-name "Bob", has email "bob@vaticle.com";
 ----
 
-3. Press btn:[Enter] twice to send the query. +
-The first pressing will start a new line for the query. +
-Pressing btn:[Enter] on an empty line will send the query.
+3. Press btn:[Enter] twice to send the query: +
+* The first pressing will start a new line for the query.
+* Pressing btn:[Enter] on an empty line will send the query.
 
 4. Commit changes:
 +
