--- a/typedb-src/modules/ROOT/pages/development/define-schema.adoc
+++ b/typedb-src/modules/ROOT/pages/development/define-schema.adoc
@@ -7,34 +7,63 @@
 [#_schema]
 == Schema
 
-A TypeDB schema is like a blueprint of a database.
+A TypeDB database schema defines all user-defined xref:typeql:ROOT:fundamentals/types.adoc#_type[types] and
+xref:typeql:ROOT:fundamentals/inference.adoc#_rules[rules] that can be used in a database.
 
-A schema contains all user-defined xref:fundamentals/types.adoc#_type[types] and xref:fundamentals/inference.adoc#_rules[rules]
-that can be used in the database.
+A TypeDB database is like a blueprint of a database.
 
-The types in a database schema define the data model, its constraints, and the vocabulary used in TypeQL queries to
-the database.
+Types represent a data model, its constraints, and a vocabulary used in TypeQL queries to a database.
 
-== How to define a schema
+Rules represent embedded logic for reasoning engine to be able to infer new relations or attribute ownerships.
 
-To define or undefine anything in a TypeDB database schema we need:
+A Define query is used to define a TypeDB database schema. See the <<_typedb_define_query>> section below.
 
+An Undefine query is used to delete types or rules from a schema. See the <<_typedb_undefine_query>> section below.
+
+For more information on how to connect to a TypeDB server or cluster, open a session to a database,
+open a transaction, and send a query, see the xref:typedb::development/connect.adoc[] page.
+
+////
 1. Build the TypeQL query string (see below on this page):
     * See how to <<_define_types,define types>>;
     * See how to <<_define_rules,define rules>>;
     * See how to <<_undefine_types,undefine types>>;
     * See how to <<_undefine_rules,undefine rules>>;
-    * See how to <<_modify_types, modify types>>
+    * See how to <<_modify_types, modify types>>.
 2. xref:development/connect.adoc#_clients[Connect] to a TypeDB database with a xref:development/connect.adoc#_sessions[SCHEMA session].
-3. Run a proper query type (xref:fundamentals/queries.adoc#_define_query[Define]/ xref:fundamentals/queries.adoc#_define_query[Undefine])
+3. Run a proper query type (xref:typeql:ROOT:fundamentals/queries.adoc#_define_query[Define]/ xref:typeql:ROOT:fundamentals/queries.adoc#_define_query[Undefine])
    with a query string we built in a xref:development/connect.adoc#_transactions[WRITE transaction].
 4. Commit the transaction to persist the changes.
+////
 
-[#_define_types]
-== Define types
+[#_typedb_define_query]
+== Define query
 
-Any number of define statements can be combined in a single Define query, requiring only one `define` clause with only
-one `define` keyword at the very beginning.
+Any number of define statements can be combined in a single Define query,
+requiring only one `define` clause with only one `define` keyword at the very beginning.
+
+Define query can define both <<_typedb_define_types,types>> and <<_typedb_define_rules,rules>>.
+
+Define queries are idempotent.
+
+.Learn more about idempotency of define queries
+[%collapsible]
+====
+Running the same define query a second time shall not produce any changes to the database schema.
+
+Running a modified version of an already executed schema definition query can add concepts to the
+schema but mostly can't modify existing ones. TypeQL schema statements do NOT replace existing type definitions but
+add missing parts.
+
+Two notable exceptions are:
+
+- **rules** (defining a new rule with an existing label/name will replace the existing rule completely), and
+- **annotations**, like the `@key` keyword (which we can remove by redefining attribute ownership without the
+  annotation).
+====
+
+[#_typedb_define_types]
+=== Define types
 
 To define a type use the following syntax:
 
@@ -50,7 +79,7 @@ define
 
 The `define` keyword is used only once per query for any number of statements.
 
-The `abstract` keyword makes the type xref:fundamentals/types.adoc#_abstract_types[abstract].
+The `abstract` keyword makes the type xref:typeql:ROOT:fundamentals/types.adoc#_abstract_types[abstract].
 
 The `owns` keyword defines an attribute ownership.
 
@@ -112,18 +141,19 @@ All types, mentioned in a type definition (owned attributes or relation that the
 in the schema or be defined in the same query.
 ====
 
+////
 [#_define_entity_type]
-=== Define entity type
+==== Define entity type
 
 See the xref:_define_types[] section.
 
 No specific syntax for entities.
 
-For more information about entity types see the xref:fundamentals/types.adoc#_entity_types[Entity types] section in
-xref:fundamentals/types.adoc[] page.
+For more information about entity types see the xref:typeql:ROOT:fundamentals/types.adoc#_entity_types[Entity types] section in
+xref:typeql:ROOT:fundamentals/types.adoc[] page.
 
 [#_define_relation_type]
-=== Define relation type
+==== Define relation type
 
 To define a relation type use the following syntax:
 
@@ -167,11 +197,11 @@ In the above example we define:
 ** inherited `owner` role.
 ====
 
-For more information about relation types see the xref:fundamentals/types.adoc#_relation_types[Relation types] section in
-xref:fundamentals/types.adoc[] page.
+For more information about relation types see the xref:typeql:ROOT:fundamentals/types.adoc#_relation_types[Relation types] section in
+xref:typeql:ROOT:fundamentals/types.adoc[] page.
 
 [#_define_attribute_type]
-=== Define attribute type
+==== Define attribute type
 
 To define an attribute type use the following syntax:
 
@@ -188,11 +218,15 @@ define
 
 The `value` keyword is mandatory and used to define a value type for the attribute.
 
-For more information about attribute types see the xref:fundamentals/types.adoc#_attribute_types[Attribute types] section in
-xref:fundamentals/types.adoc[] page.
+For more information about attribute types see the xref:typeql:ROOT:fundamentals/types.adoc#_attribute_types[Attribute types] section in
+xref:typeql:ROOT:fundamentals/types.adoc[] page.
+////
 
-[#_define_rules]
-== Define rules
+For more information on how to define a type, see the xref:typeql::schema/define-types.adoc[,window=_blank] page in the
+xref:typeql::overview.adoc[TypeQL] documentation.
+
+[#_typedb_define_rules]
+=== Define rules
 
 To define a rule use the following syntax:
 
@@ -214,10 +248,11 @@ The condition definition goes inside the `when` clause.
 
 The conclusion definition goes inside the `then` clause.
 
-For more information about rules see the xref:typeql::schema/define-rules.adoc[,window=_blank] page.
+For more information on how to define a rule, see the xref:typeql::schema/define-rules.adoc[,window=_blank] page in the
+xref:typeql::overview.adoc[TypeQL] documentation.
 
-[#_undefine]
-== Undefine
+[#_typedb_undefine_query]
+== Undefine query
 
 Undefine query is used to remove a type or a rule definition form a schema.
 
@@ -318,13 +353,15 @@ undefine
 rule <rule-label>;
 ----
 
-== Modification
+== Schema modification
+
+You can modify a schema of a database with data inserted.
 
 [#_modify_types]
 === Modify types
 
 The define statements are idempotent. By sending the same define query twice or more times the very same resulting
-schema must be achieved as if we send it only once. So types and/or rules will not be duplicated.
+schema must be achieved as if we send it only once.
 
 We can add ownership of an attribute, annotation to an ownership, or a role to play by just defining the add-on.
 
@@ -350,7 +387,7 @@ include::typeql::schema/modify.adoc[tag=rename]
 
 === Modify rules
 
-To modify a rule xref:_define_rules[define a new rule] with the same label. It will overwrite the existing rule upon
+To modify a rule xref:_typedb_define_rules[define a new rule] with the same label. It will overwrite the existing rule upon
 commit.
 
 == Learn more
