--- a/typedb-src/modules/ROOT/pages/fundamentals.adoc
+++ b/typedb-src/modules/ROOT/pages/fundamentals.adoc
@@ -54,7 +54,10 @@ Schema:: A database schema is a full set of definitions for all types and rules,
 Schema is like a blueprint of data in a database.
 
 //types
-Type:: A template for creating data instances.
+Type:: A template for creating a data instance.
+
+A type is also a category for classification of data instances.
+By defining a type, we define constraints for all instances of this type.
 
 A type is like a class for an object in OOP programming languages.
 
@@ -71,9 +74,15 @@ include::typeql::fundamentals.adoc[tag=relation_type_definition]
 
 include::typeql::fundamentals.adoc[tag=attribute_type_definition]
 
+For more information on schema types, see the xref:typeql::fundamentals.adoc#_types[Types] section on the
+xref:typeql::fundamentals.adoc[] page.
+
 //rules
-A rule represents logic embedded in a schema.
+Rules represent logic embedded in a schema.
 Rules are used by reasoning engine to infer new data, based on patterns, found in existing data.
+
+For more information on rules, see the xref:typeql::fundamentals.adoc#_rules[] section on the
+xref:typeql::fundamentals.adoc#[] page.
 
 === Data
 //Instance of a type
@@ -86,9 +95,15 @@ Retrieving data from a database can result in getting values directly, but more 
 returned by a TypeDB Driver through Driver API.
 
 //Concept
-Concept:: Either type or an instance of a type.
+Concept:: Either a type or an instance of a type.
 
 TypeDB Driver API has methods to process concepts.
+
+For more information on Driver API concept methods, see the relevant Driver API reference:
+
+* xref:clients::java/java-api-ref.adoc#_concept_methods[Java]
+* xref:clients::python/python-api-ref.adoc#_concept_methods[Python]
+* xref:clients::node-js/node-js-api-ref.adoc#_concept_methods[Node.js]
 
 //Value
 
@@ -134,9 +149,11 @@ include::typeql::queries.adoc[tag=queries_table]
 
 For more information on query types, read the xref:typeql::queries.adoc[] page.
 
+There are different ways to send a query to a TypeDB database, depending on what TypeDB Client is used.
+
 == Pattern matching
 
-TypeDB xref:typedb::fundamentals/queries.adoc[queries] are written in xref:typeql::overview.adoc[TypeQL]
+TypeDB xref:typeql:ROOT:fundamentals/queries.adoc[queries] are written in xref:typeql::overview.adoc[TypeQL]
 and use *patterns* to manipulate the schema and data of a database.
 
 A pattern is a set of statements.
