--- a/typeql-src/modules/ROOT/pages/queries.adoc
+++ b/typeql-src/modules/ROOT/pages/queries.adoc
@@ -126,7 +126,7 @@ For more information on the Undefine query, see the
 xref:typeql::schema/modify.adoc#_undefine_a_type[Modify existing schema,window=_blank] page.
 
 For examples of how to perform an Undefine query, see the
-xref:typedb::development/define-schema.adoc#_undefine[Defining schema] page.
+xref:typedb::development/define-schema.adoc#_typedb_undefine_query[Defining schema] page.
 
 [#_undefine_clause]
 === Undefine clause
@@ -197,7 +197,7 @@ match $p isa person, has full-name $f;
 ====
 
 A pattern used in the `match` clause can address both types and data instances.
-See the xref:typedb::fundamentals/patterns.adoc[] page for more information.
+See the xref:fundamentals/patterns.adoc[] page for more information.
 
 [#_get_clause]
 === Get clause
@@ -254,12 +254,12 @@ An Insert query is used to add data to the TypeDB database.
 
 An Insert query consists of an *optional* `match` clause and an `insert` clause.
 
-The optional xref:typedb::fundamentals/queries.adoc#_match[`match`] clause uses a
-xref:typedb::fundamentals/patterns.adoc#_patterns_overview[pattern]
+The optional xref:fundamentals/queries.adoc#_match[`match`] clause uses a
+xref:fundamentals/patterns.adoc#_patterns_overview[pattern]
 to find existing data which is needed as a context to insert new data. If no context is required (no existing data
 to link with the inserted data) -- there is no need for a `match` clause in this query.
 
-The xref:typedb::fundamentals/queries.adoc#_insert[`insert`] clause uses a pattern to specify the data to be inserted
+The xref:fundamentals/queries.adoc#_insert[`insert`] clause uses a pattern to specify the data to be inserted
 and may include references to the existing data found by the optional `match` clause.
 
 For example, to insert a new relation instance, we need to match every instance that will play a role in it to be
@@ -276,7 +276,7 @@ If there are no matches for a `match` clause in an `insert` query, then there wi
 ====
 
 The `insert` clause can have a pattern with multiple statements to insert in one query. But it can't insert types
-(use xref:typedb::development/define-schema.adoc#_define_types[define] to insert new types) and can't have the following:
+(use xref:typedb::development/define-schema.adoc#_typedb_define_types[define] to insert new types) and can't have the following:
 
 - Conjunction
 - Disjunction
@@ -332,7 +332,7 @@ instance.
 ====
 
 A pattern used in an `insert` clause can use the variables from the preceding `match` clause.
-See the xref:typedb::fundamentals/patterns.adoc[] page for more information.
+See the xref:fundamentals/patterns.adoc[] page for more information.
 
 [#_delete_query]
 == Delete query
@@ -341,7 +341,7 @@ A Delete query is used to remove data from the TypeDB database.
 
 A Delete query consists of a `match` clause and a `delete` clause.
 
-A `match` clause uses a xref:typedb::fundamentals/patterns.adoc#_patterns_overview[pattern] to find existing
+A `match` clause uses a xref:fundamentals/patterns.adoc#_patterns_overview[pattern] to find existing
 data/references which may be removed. To delete existing data, we need to find it first.
 
 A `delete` clause uses a pattern to specify precisely the data to be removed.
@@ -396,7 +396,7 @@ delete $p has email $e;
 ====
 
 A pattern used in a `delete` clause must use the variables from the preceding `match` clause.
-See the xref:typedb::fundamentals/patterns.adoc[Patterns] page for more information.
+See the xref:fundamentals/patterns.adoc[Patterns] page for more information.
 
 [#_update_query]
 == Update query
@@ -405,7 +405,7 @@ An Update query removes data from the TypeDB database and then inserts new data 
 
 An Update query consists of a `match` clause, a `delete` clause, and an `insert` clause.
 
-A `match` clause uses xref:typedb::fundamentals/patterns.adoc[patterns] to find existing data/references to be changed.
+A `match` clause uses xref:fundamentals/patterns.adoc[patterns] to find existing data/references to be changed.
 To delete existing data, we need to find it first.
 
 A `delete` clause is used to precisely select what to delete with a pattern. The deletion pattern is executed exactly
@@ -421,7 +421,7 @@ deletes and no inserts.
 ====
 
 The `delete` clause can have a pattern with multiple statements to delete in one query. But it can't delete types (use
-xref:typedb::fundamentals/queries.adoc#_undefine_query[undefine] to delete types) and can't have the following:
+xref:fundamentals/queries.adoc#_undefine_query[undefine] to delete types) and can't have the following:
 
 - Conjunction
 - Disjunction
@@ -429,7 +429,7 @@ xref:typedb::fundamentals/queries.adoc#_undefine_query[undefine] to delete types
 - `is` keyword
 
 The `insert` clause can have a pattern with multiple statements to insert in one query. But it can't insert types (use
-xref:typedb::fundamentals/queries.adoc#_define_query[define] to insert new types) and can't have the following:
+xref:fundamentals/queries.adoc#_define_query[define] to insert new types) and can't have the following:
 
 - Conjunction
 - Disjunction
