--- a/typedb-src/modules/ROOT/pages/overview.adoc
+++ b/typedb-src/modules/ROOT/pages/overview.adoc
@@ -13,24 +13,25 @@ We also have xref:typeql::overview.adoc[TypeQL] and xref:clients::clients.adoc[T
 * xref:introduction.adoc[] -- a brief description of TypeDB capabilities
 * xref:install-and-run.adoc[] -- install and run a local deployment or deploy in TypeDB Cloud
 * xref:quickstart-guide.adoc[] -- a step-by-step guide on setting up a working environment
-* xref:fundamentals.adoc[] -- essential knowledge, required to use TypeDB
+* xref:development/learn-basics.adoc[] -- essential knowledge, required to use TypeDB
 
 [#_developing_with_typedb]
 ==  Developing with TypeDB
 
-* xref:development/connect.adoc[] -- DB connection management, sessions, and transactions
+* xref:development/send-queries.adoc[] -- DB connection management, sessions, and transactions
 * xref:development/define-schema.adoc[] -- Define & Undefine queries usage guide
 * xref:development/write-data.adoc[] -- Insert, Delete, and Update queries usage guide
 * xref:development/read-data.adoc[] -- Get query usage guide
-* xref:development/infer.adoc[] -- inference usage guide
-* xref:development/best.adoc[] -- schema and query designing tips, troubleshooting
+* xref:development/infer-data.adoc[] -- inference usage guide
+* xref:development/best-practices.adoc[] -- schema and query designing tips, troubleshooting
+* xref:development/acid-guarantees.adoc[] -- atomicity, consistency, isolation, and durability guarantees
 
 [#_managing_typedb]
 == Managing TypeDB
 
 * xref:managing-typedb/configuration.adoc[] -- configuring a TypeDB server or cluster
-* xref:managing-typedb/user-management.adoc[] -- creation and management of users
-* xref:managing-typedb/version-update.adoc[] -- migrating to a newer version of TypeDB
+* xref:managing-typedb/users.adoc[] -- creation and management of users
+* xref:managing-typedb/upgrading.adoc[] -- migrating to a newer version of TypeDB
 * xref:managing-typedb/export-import.adoc[] -- exporting and importing database schema and data
 * xref:managing-typedb/high-availability.adoc[] -- replication, clustering, failover, and other high availability features
 * xref:managing-typedb/security.adoc[] -- encryption, authentication, and access control
@@ -51,7 +52,7 @@ We also have xref:typeql::overview.adoc[TypeQL] and xref:clients::clients.adoc[T
 ////
 * *Cloud deployments*
 ** xref:managing-typedb/cloud-deployments/account.adoc[] -- register an account, log in/out, change password, and manage settings
-** xref:managing-typedb/cloud-deployments/connect.adoc[] -- connect to a TypeDB Enterprise cluster/deployment
+** xref:managing-typedb/cloud-deployments/send-queries.adoc[] -- connect to a TypeDB Enterprise cluster/deployment
 ** xref:managing-typedb/cloud-deployments/deploy.adoc[] -- create, destroy, suspend, and resume deployments of TypeDB
 ** xref:managing-typedb/cloud-deployments/organization.adoc[] -- group users
 ** xref:managing-typedb/cloud-deployments/projects.adoc[] -- group deployments
@@ -59,7 +60,7 @@ We also have xref:typeql::overview.adoc[TypeQL] and xref:clients::clients.adoc[T
 * *Self-hosted deployments*
  ** xref:managing-typedb/self-hosted-deployments/configuration.adoc[] -- TypeDB server configuration parameters and host machine requirements
  ** xref:managing-typedb/self-hosted-deployments/export-import.adoc[] -- exporting and importing database schema and data
- ** xref:managing-typedb/self-hosted-deployments/version-update.adoc[] -- how to migrate to a newer version of TypeDB
+ ** xref:managing-typedb/self-hosted-deployments/upgrading.adoc[] -- how to migrate to a newer version of TypeDB
  ** xref:managing-typedb/self-hosted-deployments/high-availability.adoc[] -- description of TypeDB high availability features
  ** xref:managing-typedb/self-hosted-deployments/security.adoc[] -- description of TypeDB security features
 ////
@@ -98,7 +99,7 @@ for hands-on experience: create your first database and try some queries.
 
 Upon setting up a working TypeDB environment, we recommend to explore the following documentation subsections:
 
-* xref:fundamentals.adoc[] -- compressed essential knowledge about TypeDB;
+* xref:development/learn-basics.adoc[] -- compressed essential knowledge about TypeDB;
 * <<_developing_with_typedb,Developing with TypeDB>> section -- how-to guides to database connection, queries and best practice;
 * <<_managing_typedb,Managing TypeDB>> section -- configuring local and TypeDB Cloud deployments;
 * <<_tutorials,Tutorials>> section -- tutorials, how-to guides, and the xref:tutorials/iam-schema.adoc[].
