--- a/typedb-src/modules/ROOT/pages/bin/api.adoc
+++ b/typedb-src/modules/ROOT/pages/bin/api.adoc
@@ -4,18 +4,18 @@
 :longTailKeywords: TypeDB API, TypeDB Driver API, concept api, driver API, client API
 :pageTitle: TypeDB Driver API
 
-TypeDB servers accept gRPC calls from xref:clients::clients.adoc[TypeDB Clients].
+TypeDB servers accept gRPC calls from xref:clients:ROOT:clients.adoc[TypeDB Clients].
 TypeDB Clients perform validation of queries, load balancing, and some other operations transparent for users.
 
 To access all features of TypeDB and TypeDB Clients use the default interface provided by the Clients:
 
-* GUI from xref:clients::studio.adoc[TypeDB Studio],
-* CLI from xref:clients::console.adoc[TypeDB Console],
+* GUI from xref:clients:ROOT:studio.adoc[TypeDB Studio],
+* CLI from xref:clients:ROOT:console.adoc[TypeDB Console],
 * API from TypeDB Drivers:
- ** xref:clients::java/java-api-ref.adoc[Java Driver API],
- ** xref:clients::python/python-api-ref.adoc[Python API],
- ** xref:clients::node-js/node-js-api-ref.adoc[Node.js API],
- ** or xref:clients::other-languages.adoc[Community TypeDB Clients].
+ ** xref:clients:ROOT:java/java-api-ref.adoc[Java Driver API],
+ ** xref:clients:ROOT:python/python-api-ref.adoc[Python API],
+ ** xref:clients:ROOT:node-js/node-js-api-ref.adoc[Node.js API],
+ ** or xref:clients:ROOT:other-languages.adoc[Community TypeDB Clients].
 
 TypeDB Studio and TypeDB Console control sessions, transactions, and queries, as well as process the responses
 automatically to present the results (in GUI and CLI respectively) to user.
@@ -25,7 +25,7 @@ automatically to present the results (in GUI and CLI respectively) to user.
 Both TypeDB Studio and TypeDB Console are built on the base of the Java Driver.
 ====
 
-xref:clients::clients.adoc#_typedb_drivers[TypeDB Drivers] provide greater flexibility and integration with
+xref:clients:ROOT:clients.adoc#_typedb_drivers[TypeDB Drivers] provide greater flexibility and integration with
 popular programming languages/frameworks at the cost of the requirement to perform session, transaction, and data
 manipulation manually. To interact with a TypeDB Driver use TypeDB Driver API. There are slight differences between
 Driver APIs of different TypeDB Drivers, including syntax, but they are very similar to each other by design.
@@ -47,25 +47,25 @@ Driver API is divided into two big sections:
 
 To send a query to a TypeDB server a TypeDB Driver needs to:
 
-* establish a server xref:fundamentals.adoc#_clients[connection],
-* open a xref:fundamentals.adoc#_sessions[Session],
-* open a xref:fundamentals.adoc#_transactions[Transaction],
+* establish a server xref:development/send-queries.adoc#_clients[connection],
+* open a xref:development/send-queries.adoc#_sessions[Session],
+* open a xref:development/send-queries.adoc#_transactions[Transaction],
 * prepare TypeQL query string,
 * send the string as a proper type of query.
 
 These operations are done using the special classes and methods provided by TypeDB Driver. See some examples
-of how to do that with different TypeDB Drivers: xref:fundamentals.adoc[Connection],
+of how to do that with different TypeDB Drivers: xref:development/send-queries.adoc[Connection],
 xref:tutorials/sample-app.adoc[Sample application] pages, or in the
-xref:clients::/clients.adoc#_typedb_drivers[TypeDB Drivers] documentation.
+xref:clients:ROOT:clients.adoc#_typedb_drivers[TypeDB Drivers] documentation.
 
 All queries are written in TypeQL, but for some languages there are libraries to build the TypeQL queries in a more
 native way. Like the TypeQL https://github.com/vaticle/typeql/tree/master/java[library for Java,window=_blank].
 
 The exact syntax for these operations might be different in different languages. See the exact TypeDB Driver API
 documentation for more information:
-xref:clients::java/java-api-ref.adoc[Java],
-xref:clients::python/python-api-ref.adoc[Python],
-xref:clients::node-js/node-js-api-ref.adoc[Node.js].
+xref:clients:ROOT:java/java-api-ref.adoc[Java],
+xref:clients:ROOT:python/python-api-ref.adoc[Python],
+xref:clients:ROOT:node-js/node-js-api-ref.adoc[Node.js].
 
 === Response
 
@@ -74,9 +74,9 @@ either a processed result (TypeDB Studio and TypeDB Console) or a special object
 (TypeDB Drivers). For every kind of query there is a predefined type of expected response and objects.
 
 For more information on types (classes) of available objects and response types see the
-xref:development/response.adoc[Response interpretation] page.
+xref:bin/response.adoc[Response interpretation] page.
 
-For more information on types of response objects and their *methods* please see the xref:development/api.adoc[API reference]
+For more information on types of response objects and their *methods* please see the xref:bin/api.adoc[API reference]
 for the specific driver/language type.
 
 [NOTE]
@@ -146,6 +146,6 @@ see updates made using the Driver API.
 All local concepts have the method `asRemote(tx)`, where the `tx` parameter is a Transaction to use for the remote
 concept version of this local concept, and the returned value is the remote concept. See the `asRemote` method
 documentation for more details:
-xref:clients::java/java-api-ref.adoc#_concept_methods[Java],
-xref:clients::python/python-api-ref.adoc#_concept_methods[Python],
-xref:clients::node-js/node-js-api-ref.adoc#_concept_methods[Node.js].
+xref:clients:ROOT:java/java-api-ref.adoc#_concept_methods[Java],
+xref:clients:ROOT:python/python-api-ref.adoc#_concept_methods[Python],
+xref:clients:ROOT:node-js/node-js-api-ref.adoc#_concept_methods[Node.js].
