--- a/typedb-src/modules/ROOT/pages/development/infer-data.adoc
+++ b/typedb-src/modules/ROOT/pages/development/infer-data.adoc
@@ -1,5 +1,5 @@
 [#_inferring_data]
-= Use inference
+= Infer data
 :Summary: TypeDB inference queries.
 :keywords: typedb, query, inference, reasoning, rules, deduction, logic
 :longTailKeywords: typedb inference, typedb reasoning, reasoning engine
@@ -9,7 +9,7 @@
 [#_how_to_use_inference]
 == How to use inference
 
-Inference is enabled as a Read xref:development/connect.adoc#_transactions[transaction] option.
+Inference is enabled as a Read xref:development/send-queries.adoc#_transactions[transaction] option.
 
 === TypeDB Studio
 
